378 bug fe align favorites cards on profile page with design specifications (#393)
* [BUG-FE] Align Favorites Cards on Profile Page with Design Specifications

* [BUG-FE] Align Favorites Cards on Profile Page with Design Specifications, additional adjustments.

--- a/frontend/src/pages/user/UserPage.module.css
+++ b/frontend/src/pages/user/UserPage.module.css
@@ -3,22 +3,8 @@
   flex-direction: column;
   gap: 64px;
   width: 100%;
-  max-width: 343px;
   margin: 0 auto;
-
   justify-content: center;
-}
-
-@media (min-width: 768px) {
-  .wrapper {
-    max-width: 704px;
-  }
-}
-
-@media (min-width: 1440px) {
-  .wrapper {
-    max-width: 1280px;
-  }
 }
 
 .userInfoWrapper {
@@ -33,8 +19,6 @@
     gap: 40px;
     align-items: flex-start;
     width: 100%;
-    /* max-width: 1280px;  */
-
     max-width: 100%;
   }
 }
